# JusPrin

./: .cursorrules  .gitignore  CMakeLists.preset_loader.txt  CMakeLists.txt  Makefile.preset_loader  Makefile.simple_preset_loader  README.preset_loader.md  build_release_macos.sh  main.cpp  preset_loader_standalone.cpp  simple_preset_loader  simple_preset_loader.cpp  version.inc
.github/workflows/: build_all.yml  build_check_cache.yml  build_deps.yml  build_orca.yml
resources/web/homepage3/: index.html  preloaded.html
resources/web/homepage3/js/: home.js
resources/web/jusprin/: README.md  index.html  jusprin_chat_preload.html  package-lock.json  package.json
resources/web/jusprin-2/: package-lock.json  package.json  webpack.config.js
resources/web/jusprin-2/src/: App.vue
resources/web/jusprin-2/src/assets/: main.css
resources/web/jusprin/src/: App.vue
resources/web/jusprin/src/api/: index.js
resources/web/jusprin/src/components/: QuickActionButton.vue
src/libslic3r/: AppConfig.cpp  Config.cpp  Config.hpp  LocalesUtils.cpp  Orient.cpp  Orient.hpp  Preset.cpp  Preset.hpp  PrintObject.cpp
src/slic3r/: CMakeLists.txt
src/slic3r/Config/: Snapshot.cpp
src/slic3r/GUI/: AboutDialog.cpp  AmsMappingPopup.cpp  AmsWidgets.cpp  Auxiliary.cpp  BBLTopbar.cpp  BackgroundSlicingProcess.cpp  BindDialog.cpp  BitmapComboBox.cpp  Calibration.cpp  CalibrationPanel.cpp  CalibrationWizardCaliPage.cpp  ConfigWizard.cpp  CreatePresetsDialog.cpp  DownloadProgressDialog.cpp  Downloader.cpp  EditGCodeDialog.cpp  Field.cpp  FileArchiveDialog.cpp  GCodeViewer.cpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GUI_App.cpp  GUI_App.hpp  GUI_Init.cpp  GUI_ObjectList.cpp  GUI_ObjectSettings.cpp  GUI_ObjectTable.cpp  GUI_Preview.cpp  GUI_Preview.hpp  HMSPanel.cpp  HintNotification.cpp  InstanceCheck.cpp  JusPrinMainFrame.cpp  JusPrinMainFrame.hpp  KBShortcutsDialog.cpp  MainFrame.cpp  MainFrame.hpp  MarkdownTip.cpp  ModelMall.cpp  Monitor.cpp  (+40 more)
src/slic3r/GUI/Gizmos/: GLGizmoEmboss.cpp  GLGizmoSVG.cpp  GLGizmoSlaSupports.cpp  GLGizmosManager.cpp  GizmoObjectManipulation.cpp
src/slic3r/GUI/Jobs/: EmbossJob.cpp  PrintJob.cpp
src/slic3r/GUI/JusPrin/: JusPrinChatPanel.cpp  JusPrinChatPanel.hpp  JusPrinNotificationManager.cpp  JusPrinPlaterOverlay.cpp  JusPrinPlaterOverlay.hpp  JusPrinView3D.cpp  JusPrinView3D.hpp
src/slic3r/GUI/Widgets/: WebView.cpp
src/slic3r/Utils/: EmbossStyleManager.cpp  PrintHost.cpp  SimplyPrint.cpp
tests/libslic3r/: test_config.cpp
tests/unit/: CMakeLists.txt  ConfigBase_load_from_json_test.cpp  README.md  test_config.cpp  test_format.cpp  test_locales_utils.cpp  test_utils.hpp
typescript_equivalent/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript_equivalent/src/: Config.ts  LocalesUtils.ts  Utils.ts  external.d.ts  format.ts  geometry.ts  types.ts
typescript_equivalent/tests/: LocalesUtils.test.ts  format.test.ts  mocha.opts  setup.ts  test_config.ts  test_helpers.ts
